log
Thu 28 Sep 2023 05:56:47 PM UTC: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
9ff0618
Thu 28 Sep 2023 06:03:32 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
b17d646
Thu 28 Sep 2023 06:05:26 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|3
total_score: 10/70
2f015d6
Thu 28 Sep 2023 06:06:27 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6c94984
Thu 28 Sep 2023 07:28:42 PM UTC: 
 heap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:51:29: error: ‘j’ undeclared (first use in this function)
   51 |       swap(&(pq->heapArray[(j - 1) / 2]), &(pq->heapArray[i]));
      |                             ^
heap.c:51:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
70acd4a
Thu 28 Sep 2023 07:28:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d4d9505
Thu 28 Sep 2023 07:35:50 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
11ecc01
Thu 28 Sep 2023 07:36:46 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
fb45550
Thu 28 Sep 2023 07:38:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
f1a0d48
Thu 28 Sep 2023 07:44:00 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
9a50ff5
Thu 28 Sep 2023 07:45:38 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
28ed573
